[metadata]
name = rackit
description = Toolkit for building REST API clients.
long_description = file: README.md
author = Matt Pryor
author_email = matt.pryor@stfc.ac.uk
url = https://github.com/cedadev/rackit


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
